# service_upload

./: .dockerignore  .editorconfig  .env.schema  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  gunicorn_config.py  gunicorn_starter.sh  internal_requirements.txt  pyproject.toml  requirements.txt  run.py
app/: api_registry.py  config.py  main.py
app/commons/data_providers/: __init__.py  redis.py  redis_project_session_job.py
app/commons/logger_services/: formatter.py  logger_factory_service.py  namespace_declare.py
app/commons/service_connection/: minio_client.py
app/models/: base_models.py  file_data.py  folder.py  fsm_file_upload.py  models_upload.py  tag.py
app/resources/: auth_helpers.py  error_handler.py  helpers.py  lock.py
app/routers/: api_root.py
app/routers/v1/: api_data_upload.py  api_folder_creation.py
app/routers/v2/: api_data_upload_v2.py
kubernetes/: greenroom-deployment.yaml  vre-deployment.yaml
tests/: conftest.py  logger.py  prepare_test.py  pytest.ini  test_api.py  test_requirements.txt
tests/resources/: test_helpers.py
tests/routers/: test_app_root.py
tests/routers/v1/api_folder_creation/: __init__.py  test_post_folder.py  test_post_folder_batch.py  test_post_folder_bulk.py
tests/routers/v1/api_folder_upload/: chunk.txt  test_clear_status.py  test_get_status.py  test_on_sucess.py  test_upload_chunks.py  test_upload_pre.py
tests/tests/: test_api_folder_creation.py
